--- a/index.css
+++ b/index.css
@@ -22,6 +22,19 @@ h3 {
 
 h3 + p {
 	margin-top: 0em;
+	text-align: center;
+}
+
+h3i {
+	margin-top: 1.5em;
+	margin-bottom: 0.33em;
+        color: #171717;
+}
+
+h3i + p {
+	margin-top: 0em;
+	text-align: center;
+        color: #171717;
 }
 
 #mainwrap {
@@ -31,7 +44,6 @@ h3 + p {
 	margin: 1em auto 4em auto;
 	padding: 1em;
 	text-align: center;
-	background-color: white;
         background-image: url("flag.png");
 	box-shadow: 0px 0px 1em #888;
 }
@@ -41,13 +53,19 @@ h3 + p {
 }
 
 #pickfolder {
-	width: 10em;
-	height: 3em;
-	font-size: 1.5em;
+	width: 1.24em;
+	height: 1.09em;
+	font-size: 3em;
+	background-color: #171717;
+	color: #37F737;
+	font-family: Webdings;
 }
 
 #uselastfolder {
-	margin-top: 1em;
+	margin-top: .17em;
+	background-color: #171717;
+	color: #37F737;
+	font-family: Consolas;
 }
 
 #inputfolder {
